# seans_python_project_boilerplate

./: README.md  pyproject.toml
src/PACKAGE_NAME_HERE/: hello_world_module.py
tests/: test_hello_world.py
